# rag-agent

./: .gitattributes  .gitignore  Dockerfile  Langchain.sql  LoadNeo4J.sh  Pipfile  RAG.py  RAG_Conversation.py  README.md  build.sh  env.py  hypercorn.sh  langgraph.json  main.py  pyproject.toml  quart.sh  requirements.txt
.circleci/: config.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
data/: neo4j.dump  sample_emails.py
data/Healthcare/: physicians.csv  reviews.csv  visits.csv
migrations/versions/: 12c3cd5b0d47_initial_migration.py  8991664a5b66_initial_migration.py
my_agent/: RAG.py  RAG_Conversation.py
rag_agent/: RAG.py  RAG_Conversation.py  State.py
src/: app.py  config.py  main.py
src/EmailRAG/: EmailPrompts.py  EmailRAG.py  RobustEmailModelParser.py  fuzzer.py
src/Evaluation/: Chunking.py  Embeddings.py  RAGAgent.py  VectorDB.py
src/Healthcare/: HospitalCyhperChain.py  HospitalCypherChain.py  HospitalReviewChain.py  HospitalWaitingTime.py  RAGAgent.py  Tools.py  prompts.py
src/Infrastructure/: Backend.py  Checkpointer.py  PostgreSQLSetup.py  VectorStore.py
src/common/: Authentication.py  Configuration.py  ContextSchema.py  Prompts.py  ResponseHelper.py  State.py  configuration.py
src/controllers/: HealthController.py  HealthcareController.py  HomeController.py
src/middlewares/: __init__.py  auth_header.py
src/models/: DocumentGradeModel.py  EmailModel.py  EscalationModel.py  HealthcareModel.py  __init__.py  schema.py
src/rag_agent/: CheckpointedRAG.py  Context.py  EmailPrompts.py  EmailRAG.py  GraphRAG.py  Ollama.py  Prompts.py  RAG.py  RAGAgent.py  RAGPrompts.py  RAG_Conversation.py  State.py  Tools.py  VectorStore.py  configuration.py  fuzzer.py  image.py  rag-agent.py  rag_agent.py
src/rag_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rag_agent/SubAgents/: EmailSubAgent.py  HealthcareSubAgent.py
src/schema/: EmailModel.py  EscalationModel.py  schema.py
src/utils/: AsyncRetry.py  InputParser.py  ModelString.py  Neo4JImports.py  Neo4jImports.py  image.py
src/view/static/css/: style.css
src/view/static/js/: script.js
src/view/templates/: base.html  index.html
test/: conftest.py  test_document_grader.py  test_email_escalation_chain.py  test_email_parser_chain.py  test_email_rag.py  test_hospital_chatbot.py  test_hospital_cypher_chain.py  test_hospital_review_chain.py  test_ollama_embeddings.py  test_prompt_templates.py  test_ragagent.py  test_schema.py  test_value_error.py
